force-app/main/default/objects/PUD_Route__c/PUD_Route__c.object-meta.xml
<CustomObject>
    <description>Route definition for Pickup and Delivery booking system</description>
    <label>Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>