force-app/main/default/objects/PUD_Route__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Route end date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>