force-app/main/default/objects/PUD_Route__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Route end time.</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>