force-app/main/default/objects/PUD_Route__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active on Friday.</description>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>