force-app/main/default/objects/PUD_Route__c/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active on Monday.</description>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>