force-app/main/default/objects/PUD_Route__c/fields/Overnight_Route__c.field-meta.xml
<CustomField>
    <fullName>Overnight_Route__c</fullName>
    <description>Indicates the route is an overnight route spanning over two calendar days.</description>
    <formula>Start_Time__c &gt; End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the route is an overnight route spanning over two calendar days.</inlineHelpText>
    <label>Overnight Route</label>
    <type>Checkbox</type>
</CustomField>