force-app/main/default/objects/PUD_Route__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active on Saturday.</description>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>