force-app/main/default/objects/PUD_Route__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Rute start date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>