force-app/main/default/objects/PUD_Route__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Shows the current status of the Route.</description>
    <formula>IF( Decommissioned__c = TRUE,&apos;Inactive&apos;, IF( DATEVALUE(NOW())&lt; Start_Date__c,&apos;Draft&apos;, IF( DATEVALUE(NOW())&gt; End_Date__c ,&apos;Expired&apos;, &apos;Active&apos; ) ) )</formula>
    <inlineHelpText>Shows the current status of the Route.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>