force-app/main/default/objects/PUD_Route__c/fields/Sunday__c.field-meta.xml
<CustomField>
    <fullName>Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active on Sunday.</description>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>