force-app/main/default/objects/PUD_Route__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active on Thursday.</description>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>