force-app/main/default/objects/PUD_Route__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active on Tuesday.</description>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>