force-app/main/default/objects/PUD_Route__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the route is active on Wednesday.</description>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>