force-app/main/default/objects/PUD_Route__c/listViews/Adelaide_Routes.listView-meta.xml
<ListView>
    <fullName>Adelaide_Routes</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>Ade</value>
    </filters>
    <label>Adelaide Routes</label>
</ListView>