force-app/main/default/objects/PUD_Route__c/listViews/Alexandria_BPA.listView-meta.xml
<ListView>
    <fullName>Alexandria_BPA</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>Alex</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>greaterOrEqual</operation>
        <value>ALX250</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>lessOrEqual</operation>
        <value>ALX280</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>ALX268</value>
    </filters>
    <label>Alexandria BPA</label>
    <sharedTo>
        <group>ALEXANDRIA_VAN_OPS</group>
    </sharedTo>
</ListView>