force-app/main/default/objects/PUD_Route__c/listViews/Alexandria_Routes_Ready_to_Validate.listView-meta.xml
<ListView>
    <fullName>Alexandria_Routes_Ready_to_Validate</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>Alex</value>
    </filters>
    <label>Alexandria Routes</label>
    <sharedTo>
        <group>ALEXANDRIA_VAN_OPS</group>
    </sharedTo>
</ListView>