force-app/main/default/objects/PUD_Route__c/listViews/Alexandria_Transport.listView-meta.xml
<ListView>
    <fullName>Alexandria_Transport</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>equals</operation>
        <value>ALEXANDRIA TRANSPORT FACILITY</value>
    </filters>
    <label>Alexandria Transport</label>
</ListView>