force-app/main/default/objects/PUD_Route__c/listViews/AM_Seaford.listView-meta.xml
<ListView>
    <fullName>AM_Seaford</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>sea</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SEA01,SEA02,SEA03,SEA04,SEA05,SEATO1,SEATO3,SEATO5</value>
    </filters>
    <label>AM Seaford</label>
    <sharedTo>
        <group>SEAFORD_VAN_OPERATIONS</group>
    </sharedTo>
</ListView>