force-app/main/default/objects/PUD_Route__c/listViews/Bayswater_Routes2.listView-meta.xml
<ListView>
    <fullName>Bayswater_Routes2</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>bays</value>
    </filters>
    <label>Bayswater Routes</label>
</ListView>