force-app/main/default/objects/PUD_Route__c/listViews/Bendigo_Transport_Routes.listView-meta.xml
<ListView>
    <fullName>Bendigo_Transport_Routes</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>equals</operation>
        <value>Bendigo Mail Centre TRANSport</value>
    </filters>
    <label>Bendigo Transport Routes</label>
</ListView>