force-app/main/default/objects/PUD_Route__c/listViews/Bendigo_Transport_Routes1.listView-meta.xml
<ListView>
    <fullName>Bendigo_Transport_Routes1</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>contains</operation>
        <value>Bendigo</value>
    </filters>
    <label>Bendigo Transport Routes</label>
</ListView>