force-app/main/default/objects/PUD_Route__c/listViews/Bibra_Lake_Routes.listView-meta.xml
<ListView>
    <fullName>Bibra_Lake_Routes</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>Bib</value>
    </filters>
    <label>Bibra Lake Routes</label>
    <sharedTo>
        <group>BIBRA_LAKE_VANS</group>
    </sharedTo>
</ListView>