force-app/main/default/objects/PUD_Route__c/listViews/Brisbane_Transport.listView-meta.xml
<ListView>
    <fullName>Brisbane_Transport</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>Brisbane trans</value>
    </filters>
    <label>Brisbane Transport</label>
</ListView>