force-app/main/default/objects/PUD_Route__c/listViews/Brookvale_Routes.listView-meta.xml
<ListView>
    <fullName>Brookvale_Routes</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>brook</value>
    </filters>
    <label>Brookvale Routes</label>
    <sharedTo>
        <group>BROOKVALE_VAN_OPS</group>
    </sharedTo>
</ListView>