force-app/main/default/objects/PUD_Route__c/listViews/Bundall_Contract_routes.listView-meta.xml
<ListView>
    <fullName>Bundall_Contract_routes</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>contains</operation>
        <value>bun</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>bunms</value>
    </filters>
    <label>Bundall Contract routes</label>
</ListView>