force-app/main/default/objects/PUD_Route__c/listViews/Bundall_Corporate_Routes.listView-meta.xml
<ListView>
    <fullName>Bundall_Corporate_Routes</fullName>
    <columns>NAME</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>contains</operation>
        <value>bun</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>bunms</value>
    </filters>
    <label>Bundall Corporate Routes</label>
</ListView>